// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Disabled 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-select--disabled"
  >
    Velg et fjell
  </label>
  <select
    disabled
    id="components-select--disabled"
  >
    <option value="blank">
      Velg …
    </option>
    <option value="everest">
      Mount Everest
    </option>
    <option value="aconcagua">
      Aconcagua
    </option>
    <option value="denali">
      Denali
    </option>
    <option value="kilimanjaro">
      Kilimanjaro
    </option>
    <option value="elbrus">
      Elbrus
    </option>
    <option value="vinson">
      Mount Vinson
    </option>
    <option value="puncakjaya">
      Puncak Jaya
    </option>
    <option value="kosciuszko">
      Mount Kosciuszko
    </option>
  </select>
</div>
`;

exports[`Preview 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-select--preview"
  >
    Velg et fjell
  </label>
  <select
    data-width="full"
    aria-invalid="false"
    id="components-select--preview"
  >
    <option
      value
      selected
    >
      Velg et fjell …
    </option>
    <option value="everest">
      Mount Everest
    </option>
    <option value="aconcagua">
      Aconcagua
    </option>
    <option value="denali">
      Denali
    </option>
    <option value="kilimanjaro">
      Kilimanjaro
    </option>
    <option value="elbrus">
      Elbrus
    </option>
    <option value="vinson">
      Mount Vinson
    </option>
    <option value="puncakjaya">
      Puncak Jaya
    </option>
    <option value="kosciuszko">
      Mount Kosciuszko
    </option>
  </select>
</div>
`;

exports[`With Error 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-select--with-error"
  >
    Velg et fjell
  </label>
  <select
    aria-invalid="true"
    id="components-select--with-error"
    aria-describedby="components-select--with-error:validation"
  >
    <option value="blank">
      Velg …
    </option>
    <option value="everest">
      Mount Everest
    </option>
    <option value="aconcagua">
      Aconcagua
    </option>
    <option value="denali">
      Denali
    </option>
    <option value="kilimanjaro">
      Kilimanjaro
    </option>
    <option value="elbrus">
      Elbrus
    </option>
    <option value="vinson">
      Mount Vinson
    </option>
    <option value="puncakjaya">
      Puncak Jaya
    </option>
    <option value="kosciuszko">
      Mount Kosciuszko
    </option>
  </select>
  <p
    data-field="validation"
    id="components-select--with-error:validation"
  >
    Velg et fjell
  </p>
</div>
`;

exports[`With Optgroup 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-select--with-optgroup"
  >
    Velg et fjell
  </label>
  <select id="components-select--with-optgroup">
    <optgroup label="Gruppe 1">
      <option value="everest">
        Mount Everest
      </option>
      <option value="aconcagua">
        Aconcagua
      </option>
      <option value="denali">
        Denali
      </option>
      <option value="kilimanjaro">
        Kilimanjaro
      </option>
    </optgroup>
    <optgroup label="Gruppe 2">
      <option value="elbrus">
        Elbrus
      </option>
      <option value="vinson">
        Mount Vinson
      </option>
      <option value="puncakjaya">
        Puncak Jaya
      </option>
      <option value="kosciuszko">
        Mount Kosciuszko
      </option>
    </optgroup>
  </select>
</div>
`;
